XMLSCHEMA-3: Make sure that DefaultURIResolver properly resolves schema locations relative to JAR style URLs. This is important to be able to load schemas from the classpath.